# caustic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
crates/cli/: Cargo.toml
crates/cli/assets/: 02-cube-more-parameters.scad  car.scad  cube.scad  cylinder.scad
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: axis.rs  axis_aligned_bounding_box.rs  camera.rs  color.rs  image.rs  interval.rs  lib.rs  matrix.rs  random.rs  ray.rs  (+1 more)
crates/openscad/: Cargo.toml  README.md
crates/wasm/: Cargo.toml  README.md
scripts/: flamegraph.sh  pre-commit.sh
src/: color.rs  main.rs  ray.rs  vector.rs
src/object/: mod.rs  sphere.rs
web-app/: README.md  package-lock.json  package.json
web-app/backend/: .env.example  Cargo.toml  README.md
web-app/backend/migrations/: 20251230114446_initial.sql
web-app/backend/src/: main.rs  state.rs
web-app/backend/src/repository/: mod.rs  project_repository.rs  user_repository.rs
web-app/backend/src/routes/: project.rs  project_routes.rs  user.rs  user_routes.rs
web-app/backend/src/services/: project_service.rs
web-app/backend/src/utils/: mod.rs  s3.rs
web-app/frontend/: index.html  package-lock.json  package.json
web-app/public/: ray_trace.scad
web-app/src/: App.tsx  RenderWorkerPool.ts  StoreProvider.tsx  index.scss  state.tsx  store.ts
web-app/terraform/: README.md  backend.hcl.example  backend.tf  examples.tf  iam-user.tf  s3-bucket.tf
webapp/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+140 files in other folders)
